--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 body{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #f2f2f2;
+    background: linear-gradient(0deg, rgb(247,247,247) 23.8%,rgb(252,221,221) 92%);
     max-width: 450px;
     margin: 0 auto;
     padding: 0 20px;
@@ -30,6 +30,11 @@ button{
     min-height: 100vh;
 }
 
+
+/*========================
+    FORM CONTAINER 
+=========================*/
+
 .form__box{
     background-color: #fff;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
@@ -38,8 +43,14 @@ button{
     width: 100%;
     border-radius: 6px;
     margin: 2rem 0;
-
+    display: block;
+    /* display: none; */
 }
+.form__box.active{
+    display: none;
+}
+
+
 .title{
     font-size: 2rem;
     font-weight: 400;
@@ -106,8 +117,47 @@ button{
 button{
     width: 100%;
     padding: 9px;
-    background-color: cornflowerblue;
+    background: rgb(253, 207, 207);
     border: none;
     cursor: pointer;
     margin-top: 1rem;
+}
+
+
+/*=========================
+    SUCCESS CONTAINER 
+==========================*/
+
+.success__container{
+    display: none;
+}
+.success__container.active{
+    display: block;
+   
+}
+.success__box{
+     background-color: #ffff;
+     border-radius: 6px;
+     padding: 15px;
+     z-index:999;
+}
+
+.success__container p{
+    text-align: center;
+    margin: 1rem 0 1.5rem 0;
+    font-size: 17px;
+    font-weight: 500;
+}
+
+.heart{
+    position: fixed;
+    top: -1vh;
+    transform: translateY(0);
+    animation: fall 0.3s linear forwards;
+}
+
+@keyframes fall {
+    to{
+        transform: translateY(105vh);
+    }
 }
